--- a/cv/contacto.html
+++ b/cv/contacto.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
     <title>Document</title>
 </head>
+
 <body>
-    <section class="">
+    <section>
         <h2>Contacto</h2>
         <p>Si quieres contactarme, llena el siguiente formulario.</p>
         <form action="/server" method="get">
             <div class="form-group">
-                <label for="name">Nombre completo:</label>
+                <label for="name" class="bold">Nombre completo:</label>
                 <input type="text" id="name" name="name" placeholder="Ingresa tu nombre" required>
             </div>
 
             <div class="form-group">
-                <label for="email">Correo electrónico:</label>
+                <label for="email" class="bold">Correo electrónico:</label>
                 <input type="email" id="email" name="email" placeholder="Ingresa tu email" required>
             </div>
 
             <div class="form-group">
-                <label for="phone">Número de teléfono:</label>
+                <label for="phone" class="bold">Número de teléfono:</label>
                 <input type="tel" id="phone" name="phone" placeholder="Ingresa tu número" required>
             </div>
 
             <div class="form-group">
-                <label for="message">Explica que necesitas:</label>
+                <label for="message" class="bold">Explica que necesitas:</label>
                 <textarea id="message" name="message" required></textarea>
             </div>
 
-            <button type="submit">Enviar</button>
+            <div class="form-group">
+                <label for="terms" class="bold">Acepto los términos y condiciones</label>
+                <input type="checkbox" id="terms" name="terms" required>
+            </div>
+
+            <button type="submit" class="center">Enviar</button>
         </form>
     </section>
 </body>
+
 </html>
